Add more PdfPrinterHandlerTests.

Replicate some of the actual PdfPrinterHandler logic to make sure it
works correctly.

BUG=800147

Change-Id: I12d703b79cb89c8b9bbd48024f3647bdd7c04898